--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,13 @@ dependencies:
   firebase_auth: ^0.15.3+1
   cloud_firestore: ^0.12.9+5
 
+  google_sign_in: 4.5.1
+  apple_sign_in: 0.1.0
+
+  font_awesome_flutter: 8.8.1
+  provider: 4.0.5
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
