--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   font_awesome_flutter: 8.8.1
   provider: 4.0.5
 
+  uuid: 2.2.0
+
+  table_calendar: ^2.2.3
 
 dev_dependencies:
   flutter_test:
