--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.3
-  flutter_svg: ^0.18.0
+  # flutter_svg: ^0.18.0
 
   # Add the dependency for the Firebase Core Flutter SDK
   firebase_core: ^0.4.0+9
