--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sliding_up_panel: ^1.0.2
   smooth_star_rating: 1.1.1
   dash_chat: 1.1.14
+  qr_code_scanner: ^0.0.13
 
 dev_dependencies:
   flutter_test:
