--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   # For example, to use Firebase Authentication and Cloud Firestore
   firebase_auth: ^0.15.3+1
   cloud_firestore: ^0.12.9+5
+  firebase_storage: ^3.0.3   
+
 
   google_sign_in: 4.5.1
   apple_sign_in: 0.1.0
@@ -40,6 +42,7 @@ dependencies:
   smooth_star_rating: 1.1.1
   dash_chat: 1.1.14
   qr_code_scanner: ^0.0.13
+  image_picker: 0.6.7+7
 
 dev_dependencies:
   flutter_test:
