--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dash_chat: 1.1.14
   qr_code_scanner: ^0.0.13
   image_picker: 0.6.7+7
+  qr_flutter: 3.2.0
 
 dev_dependencies:
   flutter_test:
