--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   image_picker: 0.6.7+7
   qr_flutter: 3.2.0
 
+  flutter_datetime_picker: 1.4.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
